--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,6 @@
 name: base
 channels:
   - defaults
-  - conda-forge
+  - cogsci
 dependencies:
-  - numpy
-  - sympy
-  - nbgitpuller
-  - jupyter_contrib_nbextensions
+  - pygame
